Add m7 set of css classes

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -171,6 +171,7 @@
     --space-3: 15px;
     --space-4: 20px;
     --space-6: 30px;
+    --space-7: 35px;
     --space-8: 40px;
     --space-10: 50px;
 
