--- a/resources/css/custom-colors.css
+++ b/resources/css/custom-colors.css
@@ -6,6 +6,7 @@
 .gray          { color: var(--gray); }
 .dark-gray     { color: var(--dark-gray); }
 .black         { color: var(--black); }
+.light-teal    { color: var(--light-teal); }
 .inherit-color { color: inherit; }
 
 
@@ -18,4 +19,5 @@
   --gray:         #666666;
   --dark-gray:    #333333;
   --black:        #000000;
+  --light-teal:   #9fe5d5;
 }
