--- a/resources/css/custom-background-images.css
+++ b/resources/css/custom-background-images.css
@@ -43,6 +43,10 @@ Move to uploadcare???
     background-image: url('//ucarecdn.com/173e14ac-e55b-49f2-89e6-793051979629/-/format/auto/emailmodalheroIMG.png');
 }
 
+.bg-free-install {
+    background-image: url('//ucarecdn.com/bb407140-2aa3-4cc8-96d3-6183296bc759/-/format/auto/fayettevillegeomodalhero.png');
+}
+
 @media (min-width: 750px) {
     .leads-bg-hero-hair {
         background-image: url("/images/leads/hero-hair-texture-bg-dsk.jpg");
