Update the value used for the orange color
[#156113004]

Co-authored-by: Corey Reece <corey@mayvenn.com>

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -139,7 +139,7 @@
     --red:         #ff0000;
 
     --navy:        #175674;
-    --orange:      #e8a50c;
+    --orange:      #ffc520;
     --aqua:        #49bbf0;
 
     --white:        #ffffff;
