--- a/resources/css/custom-svg-colors.css
+++ b/resources/css/custom-svg-colors.css
@@ -29,7 +29,7 @@
 :root {
   --teal:         #40CBAC;
   --navy:         #175674;
-  --orange:       #E8A50C;
+  --orange:       #FFC520;
   --aqua:         #49BBF0;
 
   --white:        #ffffff;
