Style buttons more round
[#157166800]

Co-authored-by: Corey Reece <corey@mayvenn.com>

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -128,6 +128,7 @@
     --button-font-weight: var(--medium-font-weight);
     --button-padding-y: var(--space-2);
     --button-padding-x: var(--space-2);
+    --button-border-radius: 27px;
 
     --border-radius: 5px;
     --border-radius-1: 8px;
