--- a/resources/css/custom-btn.css
+++ b/resources/css/custom-btn.css
@@ -41,8 +41,6 @@
 
 :root {
   --border-width: 1px;
-  --button-border-radius: var(--border-radius);
-  --border-radius: 2px;
   --bold-font-weight: bold;
   --button-font-family: inherit;
   --button-font-size: inherit;
@@ -51,6 +49,8 @@
   --button-letter-spacing: 0;
   --button-padding-y: 1rem;
   --button-padding-x: 1rem;
+  --button-border-radius: 27px;
+
   --darken-1: rgba(0, 0, 0, .075);
   --darken-3: rgba(0, 0, 0, .375);
 }
