--- a/resources/css/custom-btn-outline.css
+++ b/resources/css/custom-btn-outline.css
@@ -2,14 +2,12 @@
 
 .btn-outline {
   border-color: currentcolor;
-}
-
-.btn-outline {
-  border-radius: var(--border-radius);
+  border-radius: var(--button-border-radius);
 }
 
 .btn-outline.is-hover,
 .btn-outline:hover {
+  border-color: var(--light-gray);
   box-shadow: inset 0 0 0 20rem var(--darken-1);
 }
 
@@ -27,9 +25,11 @@
 }
 
 :root {
+  --button-border-radius: 27px;
+
   --silver: #EBEBEB;
   --light-gray: #B4B4B4;
-  --border-radius: 3px;
+  --teal: #40cbac;
   --darken-1: rgba(0, 0, 0, .075);
   --darken-3: rgba(0, 0, 0, .375);
 }
