--- a/resources/css/custom-margin.css
+++ b/resources/css/custom-margin.css
@@ -76,6 +76,12 @@
 .mxnp4 { margin-left: -4px; margin-right: -4px; }
 .mxnp5 { margin-left: -5px; margin-right: -5px; }
 .mxnp6 { margin-left: -6px; margin-right: -6px; }
+.mynp1 { margin-top: -1px; margin-bottom: -1px; }
+.mynp2 { margin-top: -2px; margin-bottom: -2px; }
+.mynp3 { margin-top: -3px; margin-bottom: -3px; }
+.mynp4 { margin-top: -4px; margin-bottom: -4px; }
+.mynp5 { margin-top: -5px; margin-bottom: -5px; }
+.mynp6 { margin-top: -6px; margin-bottom: -6px; }
 .mbnp1 { margin-bottom: -1px; }
 .mbnp2 { margin-bottom: -2px; }
 .mbnp3 { margin-bottom: -3px; }
