--- a/resources/css/custom-background-colors.css
+++ b/resources/css/custom-background-colors.css
@@ -14,6 +14,7 @@
 .bg-clear                  { background-color: var(--clear); }
 .bg-light-teal             { background-color: var(--light-teal); }
 .bg-transparent-light-teal { background-color: var(--transparent-light-teal); }
+.bg-hover-only-teal-gray   { background-color: var(--hover-only-teal-gray); }
 .bg-too-light-teal         { background-color: var(--too-light-teal); }
 .bg-lighten-5              { background-color: var(--lighten-5); }
 
@@ -28,7 +29,8 @@
     --black:          #000000;
 
     --light-teal:             #9fe5d5;
-    --transparent-light-teal: #9fe5d5CC;
+    --transparent-light-teal: #9fe5d5cc;
+    --hover-only-teal-gray:   #e5eeec;
     --too-light-teal:         #f5fcfb;
     --facebook-blue:          #3b5998;
     --twitter-blue:           #00aced;
