--- a/resources/css/custom-typography.css
+++ b/resources/css/custom-typography.css
@@ -20,6 +20,10 @@ h1, h2, h3, h4, h5, h6 { font-weight: var(--heading-font-weight); }
 .letter-spacing-1 { letter-spacing: 1px; }
 .letter-spacing-2 { letter-spacing: 2px; }
 .letter-spacing-3 { letter-spacing: 3px; }
+.letter-spacing-4 { letter-spacing: 4px; }
+.letter-spacing-5 { letter-spacing: 5px; }
+.letter-spacing-6 { letter-spacing: 6px; }
+.letter-spacing-7 { letter-spacing: 7px; }
 
 .line-length { /* used on headers & paragraphs to make sure they're not too wide */
   max-width: 600px;
