Rotate arrow when accordion expands a section

--- a/resources/css/custom-position.css
+++ b/resources/css/custom-position.css
@@ -2,6 +2,7 @@
 .sticky { position: sticky; } /* only works in FF, Safari, mobile Safari and chrome >= 58 */
 
 .rotate-45 { transform: rotate(45deg); }
+.rotate-180 { transform: rotate(180deg); }
 
 .stacking-context { transform: translateX(0); }
 
