--- a/resources/css/custom-background-images.css
+++ b/resources/css/custom-background-images.css
@@ -47,6 +47,11 @@ Move to uploadcare???
     background-image: url('//ucarecdn.com/bb407140-2aa3-4cc8-96d3-6183296bc759/-/format/auto/fayettevillegeomodalhero.png');
 }
 
+.bg-free-install-landing {
+    background-image: url('//ucarecdn.com/01ed08c3-5c18-4b1c-8722-0a5c64630c17/-/format/auto/imagehero3x.png');
+    height: 450px;
+}
+
 @media (min-width: 750px) {
     .leads-bg-hero-hair {
         background-image: url("/images/leads/hero-hair-texture-bg-dsk.jpg");
