3 easy steps added to Fayetteville landing page
[#157672474]

Co-authored-by: Ellie Winn <ellie@mayvenn.com>

--- a/resources/css/custom-border.css
+++ b/resources/css/custom-border.css
@@ -49,7 +49,11 @@
 }
 
 .border-width-2 {
-  border-width: 2px;
+  border-width: var(--border-width-2);
+}
+
+.border-width-3 {
+    border-width: var(--border-width-3);
 }
 
 .rounded-item:first-child {
@@ -73,6 +77,9 @@
 
 :root {
   --border-width: 1px;
+  --border-width-1: 1px;
+  --border-width-2: 2px;
+  --border-width-3: 3px;
   --border-radius: 3px;
   --border-radius-0: 3px;
   --border-radius-1: 6px;
