--- a/resources/css/custom-background-images.css
+++ b/resources/css/custom-background-images.css
@@ -52,6 +52,11 @@ Move to uploadcare???
     height: 450px;
 }
 
+.bg-100-off-install {
+    background-image:  url('//ucarecdn.com/7cc2e3fc-f06a-4673-bc3a-ad3ea2cc4219/-/format/auto/-/resize/120x/patterncelebrate.png');
+    background-repeat: "repeat";
+}
+
 @media (min-width: 750px) {
     .leads-bg-hero-hair {
         background-image: url("/images/leads/hero-hair-texture-bg-dsk.jpg");
