--- a/resources/css/custom-typography.css
+++ b/resources/css/custom-typography.css
@@ -65,6 +65,7 @@ h1, h2, h3, h4, h5, h6 { font-weight: var(--heading-font-weight); }
     --sans-serif: sans-serif;
 
     --darken-2: rgba(0, 0, 0, .125);
+    --darken-3: rgba(0, 0, 0, .375);
 
     --font-weight: var(--medium-font-weight);
 
