--- a/resources/css/custom-typography.css
+++ b/resources/css/custom-typography.css
@@ -38,6 +38,7 @@ h1, h2, h3, h4, h5, h6 { font-weight: var(--heading-font-weight); }
 
 @font-face {
   font-family: 'Roboto';
+  font-display: swap;
   src: url('/fonts/Roboto-Light-webfont.woff') format('woff');
   font-weight:  300;
   font-style:   normal;
@@ -46,6 +47,7 @@ h1, h2, h3, h4, h5, h6 { font-weight: var(--heading-font-weight); }
 
 @font-face {
   font-family: 'Roboto';
+  font-display: swap;
   src: url('/fonts/Roboto-Regular-webfont.woff') format('woff');
   font-weight:  400;
   font-style:   normal;
@@ -54,6 +56,7 @@ h1, h2, h3, h4, h5, h6 { font-weight: var(--heading-font-weight); }
 
 @font-face {
   font-family: 'Roboto';
+  font-display: swap;
   src: url('/fonts/Roboto-Bold-webfont.woff') format('woff');
   font-weight:  700;
   font-style:   normal;
