Update copy for free install and a more celebratory look
[#157795016]

Co-authored-by: Ellie Winn <ellie@mayvenn.com>

--- a/resources/css/custom-background-images.css
+++ b/resources/css/custom-background-images.css
@@ -53,7 +53,7 @@ Move to uploadcare???
 }
 
 
-.bg-100-off-install {
+.bg-celebrate {
     background-image:  url('//ucarecdn.com/7cc2e3fc-f06a-4673-bc3a-ad3ea2cc4219/-/format/auto/-/resize/120x/patterncelebrate.png');
     background-repeat: "repeat";
 }
