Implement non interactive ui for product detail drop down experiment
[#157206776]

Co-authored-by: Jeff Hui <jeff@mayvenn.com>

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -74,7 +74,11 @@
 
 @import 'slick.css';
 @import 'custom-carousel.css';
+
+/* Third-party Overrides */
+
 @import 'custom-uploadcare.css';
+@import 'custom-affirm.css';
 
 /* Custom media queries */
 
