--- a/resources/css/custom-border.css
+++ b/resources/css/custom-border.css
@@ -63,6 +63,13 @@
     border-radius: 0 calc(var(--border-radius) - 1px) calc(var(--border-radius) - 1px) 0;
 }
 
+.circled-item:first-child {
+    border-radius: calc(var(--border-radius-max) - 1px) 0 0 calc(var(--border-radius-max) - 1px);
+}
+.circled-item:last-child {
+    border-radius: 0 calc(var(--border-radius-max) - 1px) calc(var(--border-radius-max) - 1px) 0;
+}
+
 .capped { border-radius: 1000px; }
 .rounded-0            { border-radius: var(--border-radius-0); }
 .rounded-top-left     { border-top-left-radius:     var(--border-radius); }
@@ -83,4 +90,5 @@
   --border-radius: 3px;
   --border-radius-0: 3px;
   --border-radius-1: 6px;
+  --border-radius-max: 9000px;
 }
