--- a/resources/css/custom-forms.css
+++ b/resources/css/custom-forms.css
@@ -11,9 +11,13 @@
 }
 
 .floating-label--input {
-  line-height: 1.2; /* Required to avoid cutting off mobile layout placeholder text on select fields */
   padding: var(--floating-label--input-padding-y) var(--floating-label--input-padding-x);
   height: calc(var(--floating-label--input-text-height) + var(--floating-label--input-padding-y) * 2);
+}
+
+select.floating-label--input.has-value {
+  line-height: 1.8; /* select text can only be adjusted via line-height */
+  padding-bottom: 0;
 }
 
 .floating-label--input.has-value {
