Display sales table in "orders" aladdin dash tab
[#159048360]
[#159048693]

Co-authored-by: Corey Reece <corey@mayvenn.com>

--- a/resources/css/custom-colors.css
+++ b/resources/css/custom-colors.css
@@ -1,3 +1,4 @@
+.yellow        { color: var(--yellow); }
 .white         { color: var(--white); }
 .light-silver  { color: var(--light-silver); }
 .silver        { color: var(--silver); }
@@ -11,6 +12,7 @@
 
 
 :root {
+  --yellow:       #ffc520;
   --white:        #ffffff;
   --light-silver: #f2f2f2;
   --silver:       #ebebeb;
