Orders list on v2 dashboard shows the status of voucher on order
[#159048966]

Co-authored-by: Ellie Winn <ellie@mayvenn.com>

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -146,6 +146,7 @@
     --navy:        #175674;
     --orange:      #ffc520;
     --aqua:        #49bbf0;
+    --purple:      #931280;
 
     --white:        #ffffff;
     --light-gray:   #ebebeb;
