--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -148,7 +148,10 @@
     --aqua:        #49bbf0;
     --purple:      #931280;
 
+    /* TODO FIX ALL OF THESE COLORS */
     --white:        #ffffff;
+    --light-silver: #f2f2f2; /* #f8f8f8 */
+    --silver:       #ebebeb; /* #f2f2f2 */
     --light-gray:   #ebebeb;
     --gray:         #cccccc;
     --dark-gray:    #666666;
