--- a/resources/css/custom-interaction.css
+++ b/resources/css/custom-interaction.css
@@ -48,8 +48,14 @@
     transition: all 300ms 0ms ease-in-out;
 }
 
+.fate-white-hover:hover {
+    background-color: var(--fate-white);
+}
+
 :root {
     --teal: #40cbac;
+    --silver: #000000;
+    --fate-white: #F8F8F8;
     --too-light-teal: #f5fcfb;
     --color-transition: all 1000ms 300ms ease-in-out;
 }
