--- a/resources/css/custom-lighten.css
+++ b/resources/css/custom-lighten.css
@@ -1,5 +1,6 @@
-.top-lit { box-shadow: 0 4px 8px 0 var(--darken-2)}
-.lit     { box-shadow: 0   0 4px 1px var(--darken-2)}
+.top-lit-light { box-shadow: 0 1px 2px 0 var(--darken-2)}
+.top-lit       { box-shadow: 0 4px 8px 0 var(--darken-2)}
+.lit           { box-shadow: 0   0 4px 1px var(--darken-2)}
 
 :root {
   --darken-2: rgba(0, 0, 0, .125);
