Retouch voucher status tooltip styles
it gets cut-off on smaller screens like iphone5, so it was decided to make the
tooltip triangle to be on the left (whole tooltip bubble is right oriented)

[#159049854]

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -57,6 +57,7 @@
 /* @import 'basscss-addons/modules/background-images'; */
 @import 'basscss-background-images';
 @import 'custom-background-images.css';
+@import 'custom-tooltip.css';
 
 /* More from v8 */
 /*
