Rename bundle deal icon filename
[#160394566]

Co-authored-by: Jeff Hui <jeff@mayvenn.com>

--- a/resources/css/custom-background-images.css
+++ b/resources/css/custom-background-images.css
@@ -5,7 +5,7 @@
 .img-coins-icon        { background-image: url('/images/icons/coins.png'); }
 .img-share-icon        { background-image: url('/images/icons/share.png'); }
 .img-shop-by-look-icon { background-image: url('/images/icons/shop-by-look@2x.png') }
-.img-shop-by-bundle-deal-icon { background-image: url('/images/icons/icon-bundle-deals.png') }
+.img-shop-by-bundle-deal-icon { background-image: url('/images/icons/icon-bundle-deals@2x.png') }
 .img-spinner           { background-image: url('/images/spinner.svg'); }
 .img-large-spinner     { background-image: url('/images/large-spinner.svg'); }
 
