--- a/resources/css/custom-forms.css
+++ b/resources/css/custom-forms.css
@@ -52,6 +52,12 @@ select:focus,
   position: relative;
 }
 
+
+select:focus, .invisible-select {
+    position: absolute;
+}
+
+
 .StripeElement--focus,
 .glow {
   outline-offset: -3px;
