Apply styles when both selectors are present, not when either are
[#161628397]

Co-authored-by: Heather Farley <heather@mayvenn.com>
Co-authored-by: Justin Watt <justinw@mayvenn.com>

--- a/resources/css/custom-forms.css
+++ b/resources/css/custom-forms.css
@@ -52,6 +52,10 @@ select:focus,
   position: relative;
 }
 
+select:focus.invisible-select {
+  position: absolute;
+}
+
 .StripeElement--focus,
 .glow {
   outline-offset: -3px;
