Changed PDP sticky bar from display: none to visibility: hidden
to allow the bar to have dimmension, to keep hidding from being broken
when moving between breakpoints

[#161820165]

Co-authored-by: Jonathan Harford <jonathanh@mayvenn.com>

--- a/resources/css/custom-hide.css
+++ b/resources/css/custom-hide.css
@@ -6,11 +6,16 @@
   clip: rect(1px, 1px, 1px, 1px);
 }
 
-@media (--on-mobile)             { .hide-on-mb    { display: none !important } }
-@media (--on-tablet)             { .hide-on-tb    { display: none !important } }
-@media (--on-desktop)            { .hide-on-dt    { display: none !important } }
-@media (--on-mobile-and-tablet)  { .hide-on-mb-tb { display: none !important } }
-@media (--on-tablet-and-desktop) { .hide-on-tb-dt { display: none !important } }
+@media (--on-mobile)             { .hide-on-mb         { display: none !important } }
+@media (--on-tablet)             { .hide-on-tb         { display: none !important } }
+@media (--on-desktop)            { .hide-on-dt         { display: none !important } }
+@media (--on-mobile-and-tablet)  { .hide-on-mb-tb      { display: none !important } }
+@media (--on-tablet-and-desktop) { .hide-on-tb-dt      { display: none !important } }
+@media (--on-mobile)             { .invisible-on-mb    { visibility: hidden !important } }
+@media (--on-tablet)             { .invisible-on-tb    { visibility: hidden !important } }
+@media (--on-desktop)            { .invisible-on-dt    { visibility: hidden !important } }
+@media (--on-mobile-and-tablet)  { .invisible-on-mb-tb { visibility: hidden !important } }
+@media (--on-tablet-and-desktop) { .invisible-on-tb-dt { visibility: hidden !important } }
 
 .display-none { display: none !important }
 .invisible { visibility: hidden; }
