Use classes instead of inlines

--- a/resources/css/custom-background-images.css
+++ b/resources/css/custom-background-images.css
@@ -19,3 +19,24 @@ Move to uploadcare???
     background-image:  url('//ucarecdn.com/7cc2e3fc-f06a-4673-bc3a-ad3ea2cc4219/-/format/auto/-/resize/120x/patterncelebrate.png');
     background-repeat: "repeat";
 }
+
+.bg-adventure-basic-prompt {
+    background-position: left 1em bottom;
+    background-repeat:   no-repeat;
+    background-size:     contain;
+}
+
+.bg-adventure-match-stylist {
+    background-image: url('//ucarecdn.com/fac7963f-499d-4d46-9d3e-29d548194a60/-/format/auto/-/quality/normal/aladdinMatchingHeroImageCR102Lm3x.png');
+    background-repeat:   no-repeat;
+    background-position: bottom center;
+    background-size: 80%;
+}
+
+.bg-adventure-shop-hair {
+    background: url(//ucarecdn.com/20636e0b-60ff-405a-88a4-94c9a3bb3e8a/-/format/auto/bg.png)
+                   center
+                   bottom/90%
+                   no-repeat,
+                linear-gradient(#CDB8D9,#9A8FB4)
+}
