Adventure: Show servicing stylist on order-completed
[#163106953]

Co-authored-by: Jeff Hui <jeff@mayvenn.com>

--- a/resources/css/custom-background-images.css
+++ b/resources/css/custom-background-images.css
@@ -8,6 +8,9 @@
 
 .img-logo { background-image: url('/images/header_logo.svg'); }
 
+.list-img-purple-checkmark { list-style-image: url('https://ucarecdn.com/2560cee9-9ac7-4706-ade4-2f92d127b565/-/resize/12x/-/format/png/iconCheckmark.png'); }
+
+
 /*
 Move to uploadcare???
 */
