--- a/resources/css/custom-colors.css
+++ b/resources/css/custom-colors.css
@@ -1,27 +1,32 @@
-.yellow        { color: var(--yellow); }
-.white         { color: var(--white); }
-.fate-white    { color: var(--fate-white); }
-.light-silver  { color: var(--light-silver); }
-.silver        { color: var(--silver); }
-.dark-silver   { color: var(--dark-silver); }
-.light-gray    { color: var(--light-gray); }
-.gray          { color: var(--gray); }
-.dark-gray     { color: var(--dark-gray); }
-.black         { color: var(--black); }
-.light-teal    { color: var(--light-teal); }
-.inherit-color { color: inherit; }
+.yellow         { color: var(--yellow); }
+.white          { color: var(--white); }
+.fate-white     { color: var(--fate-white); }
+.light-silver   { color: var(--light-silver); }
+.silver         { color: var(--silver); }
+.dark-silver    { color: var(--dark-silver); }
+.light-gray     { color: var(--light-gray); }
+.gray           { color: var(--gray); }
+.dark-gray      { color: var(--dark-gray); }
+.black          { color: var(--black); }
+.light-teal     { color: var(--light-teal); }
+.light-lavender { color: var(--light-lavender); }
+.lavender       { color: var(--lavender); }
+.inherit-color  { color: inherit; }
+
 
 
 :root {
-  --yellow:       #ffc520;
-  --white:        #ffffff;
-  --fate-white:   #f8f8f8;
-  --light-silver: #f2f2f2;
-  --silver:       #ebebeb;
-  --dark-silver:  #dadada;
-  --light-gray:   #b4b4b4;
-  --gray:         #666666;
-  --dark-gray:    #333333;
-  --black:        #000000;
-  --light-teal:   #9fe5d5;
+  --yellow:         #ffc520;
+  --white:          #ffffff;
+  --fate-white:     #f8f8f8;
+  --light-silver:   #f2f2f2;
+  --silver:         #ebebeb;
+  --dark-silver:    #dadada;
+  --light-gray:     #b4b4b4;
+  --gray:           #666666;
+  --dark-gray:      #333333;
+  --black:          #000000;
+  --light-teal:     #9fe5d5;
+  --light-lavender: rgb(202, 182, 215);
+  --lavender:       rgb(175, 159, 196);
 }
