Update placeholder text color for email capture; Add dark-silver color
Dark silver is now what silver was. Silver is now #aaa (for the placeholder text
color).

[#167055832]

Co-authored-by: Jeff Hui <jeff@mayvenn.com>

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -155,7 +155,8 @@
     /* TODO FIX ALL OF THESE COLORS */
     --white:        #ffffff;
     --light-silver: #f2f2f2; /* #f8f8f8 */
-    --silver:       #ebebeb; /* #f2f2f2 */
+    --silver:       #dadada;
+    --dark-silver:  #aaaaaa;
     --light-gray:   #ebebeb;
     --gray:         #cccccc;
     --dark-gray:    #666666;
