--- a/resources/css/custom-colors.css
+++ b/resources/css/custom-colors.css
@@ -13,6 +13,7 @@
 .lavender       { color: var(--lavender); }
 .inherit-color  { color: inherit; }
 
+.placeholder-dark-silver::placeholder { color: var(--dark-silver); }
 
 
 :root {
@@ -20,8 +21,8 @@
   --white:          #ffffff;
   --fate-white:     #f8f8f8;
   --light-silver:   #f2f2f2;
-  --silver:         #ebebeb;
-  --dark-silver:    #dadada;
+  --silver:         #dadada;
+  --dark-silver:    #aaaaaa;
   --light-gray:     #b4b4b4;
   --gray:           #666666;
   --dark-gray:      #333333;
